<resources>
    <string name="app_name" translatable="false">Notifications Recovery</string>
    <string name="show_chat">Show as chat</string>
    <string name="blacklist_auto">Blacklist system apps</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="back">Back</string>
    <string name="blacklist_reset_confirm">Are you sure you want to reset the blacklist?</string>
    <string name="whitelist_reset_confirm">Are you sure you want to reset the whitelist?</string>

    <string name="isAutoBlacklistOn" translatable="false">isAutoBlacklistOn</string>
    <string name="isNotificationEnabled" translatable="false">isNotificationEnabled</string>

    <string name="all_notification">All notification</string>
    <string name="deleted_notification">Deleted notification</string>
    <string name="advanced_search">Advanced search</string>
    <string name="chat" translatable="false">Chats</string>
    <string name="group_chat">Group chats</string>
    <string name="isChatActivity" translatable="false">Chat apps</string>
    <string name="isChatApp" translatable="false">Chat app</string>

    <string name="title_text">Title/Text</string>
    <string name="deleted">Deleted</string>
    <string name="search">Search</string>

    <string name="icon" translatable="false">icon</string>

    <string name="textview" translatable="false">TextView</string>
    <string name="ask_not_permission">To help you track the notifications you receive, this app can access and store the content of your notifications locally on your device. Your data will not be shared with third parties, and you can delete it at any time.\n You can disable notification collection at any moment directly from the app settings.\n By enabling this feature, you consent to the local processing of your notification data. For more details, please refer to our Privacy Policy.</string>
    <string name="ask_not_permission_setting_summary">To help you track the notifications you receive, this app can access and store the content of your notifications locally on your device. Your data will not be shared with third parties, and you can delete it at any time. By enabling this feature, you consent to the local processing of your notification data. Refer to our Privacy Policy.</string>
    <string name="notification_name">Notification cancellation</string>
    <string name="notification_title">Notification deleted</string>

    <string name="others">Others</string>

    <string name="open_app">Open app</string>

    <string name="blacklist" translatable="false">Blacklist</string>
    <string name="settings">Settings</string>
    <string name="reset_blacklist" translatable="false">Reset blacklist</string>
    <string name="enable_notification">Enable notifications</string>
    <string name="blacklist_info">All activated blacklisted apps will be excluded from the notification listener</string>
    <string name="notification_count">Notifications:</string>
    <string name="version">Version</string>
    <string name="rating">Rate the app</string>
    <string name="open_blacklist">Open blacklist</string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="theme">Theme</string>
    <string name="info">About</string>
    <string name="info_specific_graph">About BETA</string>
    <string name="chat_title" translatable="false">Chat apps</string>
    <string name="chat_summary">Applications marked as chat will be shown in the \"Chat\" section of the app</string>
    <string name="notification_summary">You will get a notification if this app notices that a notification received on your device has been cleared. False positives may be detected by mistake.</string>

    <string name="defaultSwitchValue">All applications</string>
    <string name="null_value">"No text captured"</string>
    <string name="github" translatable="false">GitHub</string>

    <string name="appName">Name:</string>
    <string name="text">Text:</string>
    <string name="date">Date:</string>
    <string name="conversationTitle">Conversation title:</string>
    <string name="titleBig">Extended title:</string>
    <string name="textBig">Extended text:</string>
    <string name="infoText">Info text:</string>
    <string name="peopleList">People list:</string>
    <string name="isDeleted">Deleted:</string>
    <string name="graph">Graph BETA</string>

    <string name="authErr">Authentication error</string>
    <string name="authFail">Authentication failed</string>
    <string name="authSuccess">Authentication success</string>
    <string name="authInfo">Biometric authentication or PIN</string>
    <string name="security">Security</string>
    <string name="authNoEnrolled">Authentication unavailable because no device or biometric credentials are registered</string>
    <string name="biometricUnavailable">No biometric features available on this device</string>
    <string name="biometricCurrentlyUnavailable">Biometric features are currently unavailable</string>
    <string name="biometricError">Biometric sensor error </string>
    <string name="biometricUnsupported">Biometric authentication supported by Android 11 or higher</string>
    <string name="reauth">Try authentication again</string>
    <string name="continuee">Go to notifications</string>
    <string name="biometric_title">Login to access the app</string>
    <string name="cancel">Cancel</string>
    <string name="name_of_app_selected_is_missing">Name of app selected is missing</string>
    <string name="more_info">More info</string>
    <string name="system">System</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="change_theme">Change theme</string>
    <string name="theme_changed">The theme has been changed, restart the app to apply the changes</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="MPAndroidChart_license">MPAndroidChart license</string>
    <string name="app_license">App license</string>
    <string name="licenses">Licenses</string>
    <string name="notification_permission">Notification permission</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="click_to_change">click to edit</string>
    <string name="notification_recovery_service" translatable="false">Notification Recovery service</string>
    <string name="enable_notifications_recording">Enable notifications recording</string>
    <string name="notification_recording_description">Enables the recording of notifications. When disabled, notifications will not be saved by the app.</string>
    <string name="add_widget">Add widget</string>
    <string name="last_noti_widget_description">Show the last 20 notifications received</string>
    <string name="last_noti_title">Latest notifications</string>
    <string name="chat_noti_widget_title">Chat notifications</string>
    <string name="chat_noti_widget_description">Show chat notifications</string>
    <string name="deleted_noti_widget_title">Deleted notifications</string>
    <string name="deleted_noti_widget_description">Show deleted notifications</string>
    <string name="privacy_policy" translatable="false">Privacy Policy</string>
    <string name="delete_notification">Delete notification</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_noti_warning">Are you sure you want to delete the notification? This action is irreversible</string>
    <string name="ask_not_permission_title">Do you want to enable notification collection?</string>
    <string name="explain_not_permission">To capture notifications it is necessary to grant access to the app.</string>
    <string name="clear_all_data_title">Clear all data</string>
    <string name="clear_all_data_summary">All data captured by the app will be deleted.</string>
    <string name="clear_all_data_confirm">Are you sure you want to delete all the data? The app will be restarted.</string>
    <string name="export_import">Export/Import</string>
    <string name="exports_the_notification_database_to_a_password_encrypted_file">Exports the notification database to a password encrypted file.</string>
    <string name="export">Export</string>
    <string name="import_string">Import</string>
    <string name="import_notification_database_password_generated_during_export_required">Import notification database (password generated during export required)</string>
    <string name="copy_string">Copy</string>
    <string name="zip_password" translatable="false">Zip password</string>
    <string name="enter_zip_password">Enter zip password</string>
    <string name="zip_does_not_exist">Zip file does not exist</string>
    <string name="select_the_zip">Select the zip</string>
    <string name="import_the_zip">Import the zip</string>
    <string name="import_completed">Import completed</string>
    <string name="importing_zip">Importing zip</string>
    <string name="loading">Loading…</string>
    <string name="password_should_copy">This password is only visible in this menu, you should copy it or it will be lost.</string>
    <string name="import_failed">Import failed</string>
    <string name="filters_label">Filters</string>
    <string name="app_label" translatable="false">App</string>
    <string name="apply_label">Apply</string>
    <string name="file_not_found">File not found</string>
    <string name="block_screenshots">Block screenshots</string>
    <string name="when_on_only_apps_in_the_blacklist_are_blocked_when_off_only_apps_in_the_whitelist_are_allowed">When ON, only apps in the blacklist are blocked. When OFF, only apps in the whitelist are allowed.</string>
    <string name="blacklist_mode" translatable="false">Blacklist mode</string>
    <string name="whitelist_mode" translatable="false">Whitelist mode</string>
    <string name="open_whitelist">Open whitelist</string>
    <string name="whitelist_info">All activated whitelisted apps will be included from the notification listener</string>
    <string name="reset_whitelist" translatable="false">Reset whitelist</string>
    <string name="whitelist" translatable="false">Whitelist</string>
    <string name="installed">Only installed</string>
    <string name="select_all">Select All</string>
    <string name="deselect_all">Deselect All</string>
    <string name="zip_file_password" translatable="false">ZIP File Password</string>
    <string name="enter_password_encrypt_zip_or_leave_empty">Enter a password to encrypt the ZIP file. If you leave this field empty, a random password will be generated.</string>
    <string name="password_invalid_alert">Invalid password (at least 8 characters and 1 number)</string>
    <string name="create_zip">Create ZIP</string>
    <string name="icon_licenses">Icon licenses</string>
    <string name="all">All</string>
    <string name="are_you_sure_you_want_to_delete_the_selected_items_they_cannot_be_recovered">Are you sure you want to delete the selected items? (%1$s) They cannot be recovered.</string>
    <string name="app_list" translatable="false">App list</string>
    <string name="autodetect" translatable="false">Autodetect</string>
    <string name="automatically_find_your_apps_so_you_can_manage_them_in_the_blacklist_and_whitelist">Automatically find your installed apps so you can manage them in the blacklist and whitelist.</string>
    <string name="do_you_want_to_automatically_find_your_apps_so_you_can_manage_them_in_the_blacklist_and_whitelist">Do you want to automatically find your installed apps so you can manage them in the blacklist and whitelist?</string>
</resources>