<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="start"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginTop="7sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/date"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/appName"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogPackageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llConversationTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/conversationTitle"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogConversationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llBigTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/titleBig"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogBigTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/text"
            android:textIsSelectable="true" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvDialogText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llDialogBigText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/textBig"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogBigText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llInfoText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/infoText"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogInfoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPeopleList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/peopleList"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogPeopleList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:layout_marginBottom="3sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="start"
            android:text="@string/isDeleted"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tvDialogIsDeleted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2sp"
            android:layout_weight="1"
            android:textIsSelectable="true" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>